<resources>
    <string name="app_name">Контроль фінансів</string>
    <string name="balance">Баланс: %1$s</string>
    <string name="income_summary">Доходи: %1$s</string>
    <string name="expense_summary">Витрати: %1$s</string>
    <string name="add_transaction">Додати операцію</string>
    <string name="edit_transaction">Редагувати операцію</string>
    <string name="history">Історія</string>
    <string name="statistics">Статистика</string>
    <string name="amount">Сума</string>
    <string name="category">Категорія</string>
    <string name="date">Дата</string>
    <string name="note">Опис (необов\'язково)</string>
    <string name="save">Зберегти</string>
    <string name="delete">Видалити</string>
    <string name="cancel">Скасувати</string>
    <string name="all">Усі</string>
    <string name="type_income">Дохід</string>
    <string name="type_expense">Витрата</string>
    <string name="error_invalid_amount">Введіть коректну суму</string>
    <string name="error_empty_category">Виберіть категорію</string>
</resources>
